[gd_scene load_steps=5 format=3 uid="uid://cyyfjbicwvflj"]

[ext_resource type="Script" path="res://craft_ui.gd" id="1_gakny"]
[ext_resource type="Texture2D" uid="uid://dvbfdyrl8lg37" path="res://inventory9patch.png" id="2_pasp1"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pik4q"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_x5c3l"]

[node name="CraftUI" type="Node2D"]
script = ExtResource("1_gakny")

[node name="Panel" type="Panel" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 477.0
offset_bottom = 455.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MyTradesPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MyTradesContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer"]
show_behind_parent = true
light_mask = 0
layout_mode = 2
texture = ExtResource("2_pasp1")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="My Trades" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Craft"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_pik4q")

[node name="MyCrafts" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyTradesPanel/MyTradesContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MyItemsPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer"]
show_behind_parent = true
light_mask = 0
layout_mode = 2
texture = ExtResource("2_pasp1")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 23

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "My Inventory"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_x5c3l")

[node name="MyInventory" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MyItemsPanel/MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Craft" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Craft"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/Craft" to="." method="_on_craft_pressed"]
